--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     },
     "dependencies": {
         "vue": "^2.5.11",
-        "jquery": "3.2.1"
+        "jquery": "3.2.1",
+        "admin-lte": "2.4.2"
     },
     "browserslist": [
         "> 1%",
