--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     },
     "dependencies": {
         "vue": "^2.5.11",
+        "vue-resource": "1.3.5",
+        "vue-router": "3.0.1",
         "jquery": "3.2.1",
         "admin-lte": "2.4.2"
     },
