--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
-    "ApiUrl":"http://localhost:1101/",
-    "Avatar":"/src/assets/user2-160x160.jpg"
+    "ApiBaseUrl":"http://localhost:1101",
+    "Avatar":"/src/assets/user2-160x160.jpg",
+    "LoginUrl":""
 }
