--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "mimi",
-  "description": "A Vue.js project",
+  "name": "xiaomimi",
+  "description": "for my daughter",
   "version": "1.0.0",
   "author": "shuqizhao <shuqizhao@beisen.com>",
   "license": "MIT",
-  "private": true,
+  "main": "src/components/register.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
