--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "ApiBaseUrl": "http://localhost:1101",
+    "Domain":"",
     "Avatar": "/src/assets/user2-160x160.jpg",
     "LoginTitle": "<b>Mi</b>mi",
     "LoginBoxMsg": "请使用指定账号登录",
