--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "ApiBaseUrl": "http://xcfgback.mycrm.shop",
+    "ApiBaseUrl": "http://localhost:1101",
     "Domain":"mycrm.shop",
     "Avatar": "/src/assets/user2-160x160.jpg",
     "LoginTitle": "<b>Mi</b>mi",
